task overlay, added line and word break to description to prevent overflow

--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -330,3 +330,7 @@
 .overlay_title {
     font-size: 42px;
 }
+
+.task_overlay_description {
+    word-break: break-all;
+}
